added ceph logo, option to custom pool config, updated readme.
this commit does:
- ceph logo is displayed by default (overwritable under
  assets/images/logo.png).
- config.yaml now takes a hash with the two pools, and a display_name to
  customize the pool name displayed in the dashboard

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
+# the two pools being displayed
+# (key is the ceph pool name, you can customize display with display_name)
 pools:
-  - images
-  - volumes
+  images:
+    display_name: 'Images'
+  volumes:
+    display_name: 'Volumes'
